syntax = "proto2";

package bgs.protocol.v2;

message Variant {
	oneof type {
		bool bool_value = 1;
		int64 int_value = 2;
		double float_value = 3;
		string string_value = 4;
		bytes blob_value = 5;
		uint64 uint_value = 6;
	}
}

message Attribute {
	optional string name = 1;
	optional .bgs.protocol.v2.Variant value = 2;
}

message AttributeFilter {
	enum Operation {
		MATCH_NONE = 0;
		MATCH_ANY = 1;
		MATCH_ALL = 2;
		MATCH_ALL_MOST_SPECIFIC = 3;
	}

	optional .bgs.protocol.v2.AttributeFilter.Operation op = 1 [default = MATCH_NONE];
	repeated .bgs.protocol.v2.Attribute attribute = 2;
}

